--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "timer",
     "performance"
   ],
-  "version": "0.2.0-DEV",
+  "version": "0.2.0",
   "author": "Sky Bet",
   "contributors": [
     "Stephen Melrose <me@stephenmelrose.co.uk>"
